# MarketSenseApp

./: .gitignore  CHANGELOG.md  CLAUDE.md  PROJECT.md  README.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  execute-T04-T05-PLAN.md  package-lock.json  package.json  scope.json  tailwind.config.js  vite.config.ts
.claude/: settings.json
.github/scripts/: patch-bundle-dmg.sh
.github/workflows/: deploy.yml  release.yml
landing/: index.html  wrangler.toml
memory/: decisions.md  heartbeat.md  progress-2026-03-26.md
memory/lessons/: react.md  rust.md  stack.md  tauri.md  vercel.md  windows.md
memory/sessions/: 2026-03-21.md  2026-03-23.md  2026-03-27.md  2026-03-30.md  2026-04-02-m3.md
public/: guide-en.html  guide-vi.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: analyst.rs  auth.rs  db.rs  fetcher.rs  lib.rs  main.rs  scout.rs  subscription.rs  user_db.rs
src/components/Dashboard/: AlertFeed.tsx
src/components/Settings/: KeywordManager.tsx  ScoutSettings.tsx  SourceManager.tsx
src/components/Setup/: SetupWizard.tsx
src/lib/: db.ts
